# cpp-googletest-prototype

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  inc.h
test/: CMakeLists.txt  Other.cpp  Sample.cpp  inc.h
